# coproxy

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
contrib/: com.coproxy.plist  coproxy.service
scripts/: run-openai-compat-tests.sh
src/: cli.rs  lib.rs  main.rs  state.rs
src/auth/: device_flow.rs  mod.rs  token_store.rs
src/openai/: error.rs  types.rs
src/provider/: ghcp.rs  mod.rs
src/server/: mod.rs
src/server/routes/: auth.rs  chat_completions.rs  embeddings.rs  mod.rs  models.rs  responses.rs
tests/: README.md  conftest.py  requirements.txt  test_chat_completions_compat.py  test_models_compat.py  test_not_supported_endpoints_compat.py
