[package]
name = "coproxy"
version = "0.1.2"
edition = "2024"
description = "OpenAI-compatible API proxy backed by GitHub Copilot"
license = "MIT"
repository = "https://github.com/hedonhermdev/coproxy"
homepage = "https://github.com/hedonhermdev/coproxy"
keywords = ["openai", "copilot", "proxy", "api", "llm"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
